# ChessEngine

./: Cargo.toml  README.md  evaluation-essay.md  project-essay.md
src/: actions.rs  best_action_finder.rs  board_state.rs  chess_AI.rs  evaluator.rs  gui.rs  main.rs  minimax.rs  possible_move_iter.rs  resource_loader.rs  rules.rs
src/actions/: action_rules.rs  action_tests.rs
src/best_action_finder/: endgame_table_search.rs  evaluator.rs  minimax.rs  opening_tables.rs
src/chess_AI/: evaluate.rs  minimax.rs
