[package]
name = "chess_engine"
version = "0.1.0"
authors = ["Christopher Lang <christopher-d-lang@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ggez = "0.5.1"
shakmaty-syzygy = "0.14.0"
shakmaty = "0.17.1"
msgbox = "0.6.0"